# nanogram

./: pyproject.toml
src/: _backend.cpp
src/nanogram/: __init__.py
