[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "nanogram"
version = "0.0.1dev0"
readme = "README.md"
description = "Lightweight and fast histogramming in Python"
authors = [
    { name = "Doug Davis", email = "ddavis@ddavis.io" },
]
maintainers = [
    { name = "Doug Davis", email = "ddavis@ddavis.io" },
]
requires-python = ">=3.8"
dependencies = ["numpy"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved"
    "Intended Audience :: Science/Research",
]

[tool.pytest.ini_options]
norecursedirs = ["extern"]
testpaths = ["tests"]
addopts = [
    "-v",
    "-ra",
    "--showlocals",
    "--strict-markers",
    "--strict-config",
]

[tool.cibuildwheel]
skip = "pp* cp27* cp35* cp36* cp37* *-manylinux_i686 *-musllinux_i686"
manylinux-x86_64-image = "manylinux2014"

test-command = "pytest {package}/tests"
test-skip = "pp*macos* *universal2:arm64"
test-requires = ["pytest", "numpy"]
